# argos3-pipuck

./: README.md
doc/: ARGoS_LICENSE.txt
src/: CMakeLists.txt
src/cmake/: ARGoSBuildChecks.cmake  ARGoSBuildOptions.cmake  ARGoSPackaging.cmake
src/plugins/robots/: CMakeLists.txt
src/plugins/robots/pi-puck/: CMakeLists.txt
src/plugins/robots/pi-puck/control_interface/: ci_pipuck_camera_system_sensor.cpp  ci_pipuck_camera_system_sensor.h  ci_pipuck_ground_sensor.h  ci_pipuck_light_sensor.cpp  ci_pipuck_light_sensor.h  ci_pipuck_tof_sensor.cpp  ci_pipuck_tof_sensor.h
src/plugins/robots/pi-puck/simulator/: dynamics2d_pipuck_model.cpp  pipuck_camera_system_default_sensor.cpp  pipuck_entity.cpp  pipuck_entity.h  pipuck_light_default_sensor.cpp  pipuck_light_default_sensor.h  pipuck_tof_default_sensor.cpp  pipuck_tof_default_sensor.h
src/plugins/simulator/physics_engines/dynamics3d/: CMakeLists.txt  dynamics3d_virtual_magnetism_plugin.cpp
src/plugins/simulator/visualizations/qt-opengl/: CMakeLists.txt
src/testing/: CMakeLists.txt
src/testing/pi-puck/simulator/controllers/: CMakeLists.txt  test_pipuck_cpp.cpp  test_pipuck_cpp.h
src/testing/pi-puck/simulator/experiments/: calibrate_pipuck.argos  test_pipuck_cpp.argos  test_pipuck_lua.argos
